# protocol-siftpp

./: .dockerignore  .gitattributes  .gitignore  DESIGN.md  Dockerfile  LICENSE  README.md  pyproject.toml
docs/: ACCURACY_REPORT.md  ARCHITECTURE.md  DATASET.md  DEMO_SCRIPT.md  DEVPOST_STORY.md  DEVPOST_SUBMISSION.md  RUN_LOGS.md  SUBMISSION_CHECKLIST.md  TRY_IT_OUT.md
docs/examples/: README.md  linux-smoke.txt  linux-volcheck.txt  spoliation_report.json
docs/examples/m57-pat-2009-12-05/: SOURCE.md  audit.jsonl  report.html  report.json  report.md
docs/examples/srl-2018-base-file-memory/: audit.jsonl  report.html  report.json  report.md
docs/examples/srl-2018-linux/: audit.jsonl  report.html  report.json  report.md
docs/examples/srl-2018-live/: audit.jsonl  report.html  report.json  report.md
src/protocol_siftpp/: __init__.py  agent_config.py  audit.py  cli.py  client_tools.py  demo.py  gui.py  mcp_client.py  orchestrator.py  prompts.py  report_html.py  sample_case.py  schema.py  spoliation_test.py  tamper_test.py  trace.py  verify_all.py
src/protocol_siftpp/mcp_server/: __init__.py  server.py  volatility.py
tests/: test_agent_config.py  test_cli_env.py  test_demo.py  test_foundation.py  test_gui.py  test_mcp_readonly.py  test_orchestration.py  test_report_html.py  test_sample_case.py  test_schema_reinvestigation.py  test_spoliation.py  test_tamper.py  test_trace.py
tools/: linux_realrun.sh  linux_smoke.sh  linux_volcheck.sh  render_architecture.py
