[project]
name = "protocol-siftpp"
version = "0.1.0"
description = "A self-verifying, autonomous DFIR analyst: read-only MCP forensic tools + an adversarial Investigator/Skeptic self-correction loop."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Protocol SIFT++ contributors" }]
dependencies = [
    "mcp>=1.0",
    "pydantic>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/protocol_siftpp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
