[project]
name = "protocol-siftpp"
version = "0.1.0"
description = "A self-verifying, autonomous DFIR analyst: read-only MCP forensic tools + an adversarial Investigator/Skeptic self-correction loop."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Protocol SIFT++ contributors" }]
dependencies = [
    "anthropic>=0.106.0",
    "mcp>=1.0",
    "py7zr>=1.1.0",
    "pydantic>=2.7",
    "starlette>=0.37",
    "uvicorn>=0.30",
    "volatility3>=2.28.0",
]

[project.scripts]
siftpp-mcp = "protocol_siftpp.mcp_server.server:main"
siftpp-investigate = "protocol_siftpp.cli:main"
siftpp-spoliation-test = "protocol_siftpp.spoliation_test:main"
siftpp-tamper-test = "protocol_siftpp.tamper_test:main"
siftpp-demo = "protocol_siftpp.demo:main"
siftpp-download-case = "protocol_siftpp.sample_case:main"
siftpp-report = "protocol_siftpp.report_html:main"
siftpp-gui = "protocol_siftpp.gui:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/protocol_siftpp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
